crates/carta/tests/snapshots/golden_e2e__rst__rst__tables-simple.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
===== =====
Name  Score
===== =====
Alice 90
Bob   75
===== =====
