crates/carta/tests/snapshots/golden_e2e__rst__rst__target-escaped-colon.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
The reference `name: with colon <http://example.com/colon>`__ points at
an escaped-colon target.
