crates/carta/tests/snapshots/golden_e2e__rst__rst__target-uri-escaping.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A `named <http://example.com/a%20path>`__ link and an
`anonymous <http://example.com/another%20path>`__ link whose
destinations contain spaces.
