crates/carta/tests/snapshots/golden_e2e__rst__rst__transitions.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A paragraph above the transition.

--------------

A paragraph below the transition.
